# simple-nurec-viewer

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  gaussian.py  pyproject.toml  requirements.txt  sky_cubemap.py  viewer.py
grpc/: .gitignore  pyproject.toml
grpc/simple_nurec_grpc/: __init__.py
grpc/simple_nurec_grpc/proto/: render.proto
notebook/: concat_video.ipynb  dbg.ipynb  test_grpc.ipynb
simple_nurec_viewer/: __init__.py  __main__.py  cli.py
simple_nurec_viewer/cli/: __init__.py  export.py  server.py  view.py
simple_nurec_viewer/core/: __init__.py  loader.py  rendering.py  sky.py  viewer.py
simple_nurec_viewer/export/: __init__.py  camera.py  cli.py  loader.py  renderer.py  writer.py
simple_nurec_viewer/gaussians/: __init__.py  base.py  hybrid.py  rigid.py
simple_nurec_viewer/scenes/: __init__.py  sky.py
simple_nurec_viewer/scenes/gaussians/: __init__.py  base.py  hybrid.py  rigid.py
simple_nurec_viewer/utils/: __init__.py  rigid.py
