[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "simple-nurec-viewer"
version = "0.1.0"
description = "A 3D Gaussian Splatting viewer for NuRec USDZ files"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["3d", "gaussian-splatting", "nurec", "viewer", "visualization"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Visualization",
]

dependencies = [
    # PyTorch
    "torch>=2.0.0",
    "torchvision>=0.15.0",

    # 3D Gaussian Splatting
    "gsplat==1.5.3",

    # Web viewer
    "viser>=0.1.0",
    "nerfview>=0.1.0",

    # Rendering
    "nvdiffrast>=0.3.0",

    # Utilities
    "imageio[ffmpeg]>=2.31.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "splines>=0.3.0",
    "tqdm>=4.65.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.5.0",
]

[project.urls]
Homepage = "https://github.com/your-org/simple-nurec-viewer"
Repository = "https://github.com/your-org/simple-nurec-viewer.git"
Issues = "https://github.com/your-org/simple-nurec-viewer/issues"

[project.scripts]
simple-nurec-viewer = "simple_nurec_viewer.cli:main"
simple-nurec-viewer-export = "simple_nurec_viewer.export.cli:main"

[tool.setuptools]
packages = ["simple_nurec_viewer"]

[tool.black]
line-length = 120
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 120

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
