[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "simple-nurec-viewer"
version = "0.1.0"
description = "A 3D Gaussian Splatting viewer for NuRec USDZ files"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Your Name", email = "your.email@example.com" }]
keywords = ["3d", "gaussian-splatting", "nurec", "viewer", "visualization"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering :: Visualization",
]

dependencies = [
  # PyTorch
  "torch>=2.0.0",
  "torchvision>=0.15.0",

  # 3D Gaussian Splatting
  "gsplat==1.5.3",

  # Web viewer
  "viser>=0.1.0",
  "nerfview>=0.1.0",

  # Rendering
  "nvdiffrast>=0.3.0",

  # Utilities
  "imageio[ffmpeg]>=2.31.0",
  "numpy>=1.24.0",
  "matplotlib>=3.7.0",
  "splines>=0.3.0",
  "tqdm>=4.65.0",

  # CLI
  "tyro>=0.8.0",
  "rich>=13.0.0",
]

[project.optional-dependencies]
dev = ["pre-commit", "ruff"]

[project.urls]
Homepage = "https://github.com/your-org/simple-nurec-viewer"
Repository = "https://github.com/your-org/simple-nurec-viewer.git"
Issues = "https://github.com/your-org/simple-nurec-viewer/issues"

[project.scripts]
# Unified CLI entry point
simple-nurec = "simple_nurec_viewer.__main__:main"

[tool.setuptools]
packages = [
  "simple_nurec_viewer",
  "simple_nurec_viewer.scenes",
  "simple_nurec_viewer.scenes.gaussians",
  "simple_nurec_viewer.cli",
]

# ruff
[tool.ruff]
line-length = 120
respect-gitignore = false
lint.select = [
  "E",      # pycodestyle errors.
  "F",      # Pyflakes rules.
  "I",      # isort formatting.
  "PLC",    # Pylint convention warnings.
  "PLE",    # Pylint errors.
  "PLR",    # Pylint refactor recommendations.
  "PLW",    # Pylint warnings.
  "NPY201", # NumPY 2.0 migration https://numpy.org/devdocs/numpy_2_0_migration_guide.html#ruff-plugin
]
lint.ignore = [
  "E501",    # Line too long.
  "E731",    # Lambda function inline.
  "F722",    # Forward annotation false positive from jaxtyping. Should be caught by pyright.
  "F821",    # Forward annotation false positive from jaxtyping. Should be caught by pyright.
  "PLR2004", # Magic value used in comparison.
  "PLR0915", # Too many statements.
  "PLR0913", # Too many arguments.
  "PLC0414", # Import alias does not rename variable. (this is used for exporting names)
  "PLC0415", # Import outside top level.
  "PLC1901", # Use falsey strings.
  "PLR5501", # Use `elif` instead of `else if`.
  "PLR0911", # Too many return statements.
  "PLR0912", # Too many branches.
  "PLW0603", # Globa statement updates are discouraged.
  "PLW2901", # For loop variable overwritten.
  "PLR1730", # Replace if statement with min/max
]
extend-exclude = ["ref"]

[tool.ruff.lint.isort]
combine-as-imports = true
known-first-party = ["simple_nurec_viewer"]
split-on-trailing-comma = false
